5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1633_2940.log
== SUBMITION (2019-04-02 18:05:33) 
-- CODE:
vf=vi(1+j)**n
entrada=vi,j,n
print(round(vf,2))
-- EXECUTION TIME:
0.215266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 1, in <module>
    vf=vi(1+j)**n
NameError: name 'vi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:35) 
-- CODE:
vf=vi(1+j)**n
entrada=vi,j,n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf=vi(1+j)**n
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:07:42) 
-- CODE:
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.23418
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 1, in <module>
    vf=vi(1+j)**n
NameError: name 'vi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:44) 
-- CODE:
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf=vi(1+j)**n
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:20) 
-- CODE:
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf=vi(1+j)**n
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:09:17) 
-- CODE:
vf=vi(1+j)**n
vi=("valor inicial")
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.161066
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 1, in <module>
    vf=vi(1+j)**n
NameError: name 'vi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:20) 
-- CODE:
vf=vi(1+j)**n
vi=("valor inicial")
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf=vi(1+j)**n
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:10:12) 
-- CODE:
vi=(" valor inicial ")
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.12321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 2, in <module>
    vf=vi(1+j)**n
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:12) 
-- CODE:
vi=(" valor inicial ")
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vf=vi(1+j)**n
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:02) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n("meses")
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.119315
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 3, in <module>
    n("meses")
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:05) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n("meses")
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n("meses")
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:17) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf=vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)**n
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:45) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf=int(vi(1+j)**n)
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=int(vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:37) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= vi(1+j)**n
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf= vi(1+j)**n
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:00) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= float(vi(1+j)**n)
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf= float(vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:13:01) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= float(vi(1+j)**n)
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.137245
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 4, in <module>
    vf= float(vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:02) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= float(vi(1+j)**n)
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf= float(vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:41) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= int(input((vi(1+j)**n)))
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf= int(input((vi(1+j)**n)))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:13:44) 
-- CODE:
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= int(input((vi(1+j)**n)))
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.11487
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 4, in <module>
    vf= int(input((vi(1+j)**n)))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:01) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= vf=vi(1 + j)**n
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf= vf=vi(1 + j)**n
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:30) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= int(vi(1 + j)**n)
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf= int(vi(1 + j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:15:32) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= int(vi(1 + j)**n)
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.192782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 5, in <module>
    vf= int(vi(1 + j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:16:39) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= int(input(vi(1+j)**n))
entrada=vi+j*n
print(round(vf,2))
-- EXECUTION TIME:
0.151342
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 5, in <module>
    vf= int(input(vi(1+j)**n))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:41) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")
vf= int(input(vi(1+j)**n))
entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf= int(input(vi(1+j)**n))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:09) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")

entrada=vi+j*n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    entrada=vi+j*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:30) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")

entrada=str(*vi+j*n)
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    entrada=str(*vi+j*n)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:44) 
-- CODE:
vf=("valor final")
vi=(" valor inicial ")
j=("juros")
n=("meses")


print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(vf,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:33:33) 
-- CODE:
vi(float(input))
n(float(input))
j(float(input))
vf= vi * (1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.162114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2940/main.py", line 1, in <module>
    vi(float(input))
NameError: name 'vi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:35) 
-- CODE:
vi(float(input))
n(float(input))
j(float(input))
vf= vi * (1+j)**n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vi(float(input))
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:34:47) 
-- CODE:
vi=float(input())
n=float(input())
j=float(input())
vf= vi * (1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.140328
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
20587.87
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
10293.09
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:47) 
-- CODE:
vi=float(input())
n=float(input())
j=float(input())
vf= vi * (1+j)**n
print(round(vf,2))
-- OUTPUT:
20587.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:49) 
-- CODE:
vi=float(input())
n=float(input())
j=float(input())
vf= vi * (1+j)**n
print(round(vf,2))
-- OUTPUT:
20587.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:25) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input())
vf= vi * (1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.195885
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
